# visual_odometry

./: CMakeLists.txt  README.md  config.txt
include/: configuration_file_parser.h  rgbd_base.h  slam_base.h~  visual_odometry.h
src/: CMakeLists.txt  configuration_file_parser.cpp  rgbd_base.cpp  test_vo.cpp  visual_odometry.cpp
